objects/P360_Mail_Queue__c.object
<CustomObject>
    <fields>
        <fullName>AP_Partner_Assigned_Date__c</fullName>
        <description>Date on which the partner was assigned on Assigned Partner Record.</description>
        <formula>Assigned_Partner__r.Partner_Assigned_Date__c</formula>
        <label>AP Partner Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related assigned partner record.</description>
        <label>Assigned Partner</label>
        <referenceTo>Assigned_Partner__c</referenceTo>
        <relationshipName>P360_Mail_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Name__c</fullName>
        <description>Name of the end user account</description>
        <formula>Assigned_Partner__r.Customer_Account__r.Name</formula>
        <label>Customer Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_City__c</fullName>
        <description>Customer account city.</description>
        <formula>Assigned_Partner__r.Customer_Account__r.CRCity__c</formula>
        <label>Customer City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DuplicatePrevention__c</fullName>
        <description>P360 May '13 Release: Duplicate prevention field to ensure that notifications are not sent multiple times</description>
        <label>DuplicatePrevention</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be true if notification needs to send through Email.</description>
        <label>Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Assignment_Date__c</fullName>
        <formula>Lead__r.Partner_Assigned_Date__c</formula>
        <label>Lead Assignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Company__c</fullName>
        <description>Company of the Lead assigned to Partner Admin</description>
        <formula>Lead__r.Company</formula>
        <label>Lead Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Name__c</fullName>
        <description>Name of the Lead assigned to the Partner Admins</description>
        <formula>Lead__r.FirstName + ' ' +  Lead__r.LastName</formula>
        <label>Lead Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Lead record.</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>P360_Mail_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notification_Type__c</fullName>
        <label>Notification Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead Partner Assignment</fullName>
                </value>
                <value>
                    <fullName>New Partner Generated Lead</fullName>
                </value>
                <value>
                    <fullName>New Partner Generated Target Prospect</fullName>
                </value>
                <value>
                    <fullName>Target Prospect Activation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notify_Partner_on_Activation__c</fullName>
        <description>Notify Partner upon creation
Notify Partner onActivation</description>
        <formula>TEXT(Assigned_Partner__r.Notify_Partner_on_Activation__c)</formula>
        <label>Notify Partner on Activation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <description>Partner Name for the Lead or the Target Prospect</description>
        <formula>if( Assigned_Partner__c != null,  Assigned_Partner__r.Assigned_Partner__r.Name, '')
+
if( Lead__c != null,  Lead__r.Channel_Partner__r.Name,'')</formula>
        <label>Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Email__c</fullName>
        <description>Email address of the recipient</description>
        <label>Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User supposed to receive the email</description>
        <label>Recipient</label>
        <referenceTo>User</referenceTo>
        <relationshipName>P360_Mail_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipient_language__c</fullName>
        <description>Language of the mail recipient</description>
        <label>Recipient language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Email Sent</fullName>
                </value>
                <value>
                    <fullName>Acknowledged On Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Description__c</fullName>
        <description>Technology description of the assigned partner record.</description>
        <formula>Assigned_Partner__r.Target_Description__c</formula>
        <label>Tech Description</label>
        <type>Text</type>
    </fields>
    <description>This is a junction object that holds record for every Partner Assignment mail sent out to PAs for Leads and Assigned Partner. Created this object as the PA notifications have to be sent out to multiple recipients.</description>
    <label>P360 Notifications Queue</label>
    <nameField>
        <displayFormat>{00}</displayFormat>
        <label>P360 Mail Queue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>P360 Notifications Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>Lead_Assignment_Date__c</columns>
        <columns>Recipient__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Email_Sent</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>Lead_Assignment_Date__c</columns>
        <columns>Recipient__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Email Sent</value>
        </filters>
        <label>Email Sent</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TODAY</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>Lead_Assignment_Date__c</columns>
        <columns>Recipient__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Notification_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>TODAY</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>YESTERDAY</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>Lead_Assignment_Date__c</columns>
        <columns>Recipient__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>YESTERDAY</label>
        <language>en_US</language>
    </listViews>
</CustomObject>